Wed Apr 14 09:06:09 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * tao/RTCORBA/RT_Invocation_Endpoint_Selectors.cpp:
          Updated comments that motivate the removal of throw statements
          back in February 2009.

Wed Apr 14 07:50:23 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_component/servant_svh.cpp:
        * TAO_IDL/be/be_visitor_component/servant_svs.cpp:
          Another generated code reduction for LwCCM

Wed Apr 14 06:20:23 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_component/context_svh.cpp:
          Const change

        * TAO_IDL/be/be_visitor_component/servant_svs.cpp:
          Generate correct base class

Tue Apr 13 17:11:26 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_component.cpp:
        * TAO_IDL/be/be_visitor_component/servant_svh.cpp:
        * TAO_IDL/be/be_visitor_component/context_svh.cpp:
        * TAO_IDL/be/be_visitor_component/servant_svs.cpp:
        * TAO_IDL/be_include/be_component.h:
        * TAO_IDL/be_include/be_visitor_component/servant_svs.h:

          - Changed the scanning mechanism in the component node
            to increment unsigned long members for all port kinds
            (uses multiple and read-write attribute members are
            still boolean flags).

          - Removed duplicate mechanism to the above in the servant
            source visitor.

          - Moved the generation of get_all_emitters() outside the
            check for existence of emit port(s). If there are no
            emit ports, the method returns a sequence (of emitter
            description structs) of length 0. If the LwCCM option
            is passed to the IDL compiler, this method is not
            generated, and the base class method (returning a null
            pointer) is visible instead.

Tue Apr 13 12:56:23 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
