@@ -1,3 +1,11 @@
+Wed Apr 14 13:55:32 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * TAO_IDL/be/be_visitor_interface/ami4ccm_sendc_ex_idl.cpp:
+        
+          Fixed bug in code generation of AMI4CCM executor IDL. Thanks
+          to Marijke Hengstmengel <mhengstmengel at remedy dot nl> for
+          reporting the bug.
+
 Wed Apr 14 09:06:09 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>
 
         * tao/RTCORBA/RT_Invocation_Endpoint_Selectors.cpp:
